限界性能評価について記述。

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-まだ、完成していません。
+multi processing によって、simulation をする事を目的として開発を進めました。
+
+しかし、まだ、完成していません。
 OpenGL を動かすことが出来る程度です。
 
 = 説明
@@ -22,4 +24,10 @@ ctrl-c で終了。
 = python3 の性能評価
 umatobi/performance
 以下の script を実行すると、お使いの PC 上で python3 の
-性能評価を色々することが出来ます。
+限界の性能評価を色々することが出来ます。
+
+umatobi/performance/max-XXX.py
+
+では、かなり重い負荷をかけることが出来ますので、
+お使いのPCが不安定になったりする場合があります。
+注意して遊んでください。
