馬跳び algorythm の詳細を説明する file を ooo/ に置いたことを説明。
see detail in ooo/umatobi.odp and ooo/umatobiAlgo.txt
これも発見できて嬉しかった。
~/git.local/omoide
から発掘した。

~/git.local/omoide
以下を調べて著作権的に大丈夫か確認の後，公開しよう。
他人が著作権を持つ pdf とか commit していると不味いので。

--- a/README
+++ b/README
@@ -1,7 +1,17 @@
+= umatobi
+umatobi DHT simulator
+
 multi processing によって、simulation をする事を目的として開発を進めました。
 
 しかし、まだ、完成していません。
 OpenGL を動かすことが出来る程度です。
+
+= algorythm
+自分にとって n 個隣の node に，
+あなたにとって n 個隣の node を教えてと問い合わせる。
+log(N)回。
+
+see detail in ooo/umatobi.odp and ooo/umatobiAlgo.txt
 
 = 説明
 umatobi/simulation.py:
