--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,7 @@
 $ sudo apt-get install freeglut3-dev
 $ pip3 install PyOpenGL matplotlib
 $ pip3 install virtualenv
+$ pip3 install pyyaml
 $ sudo apt-get install python-virtualenv
 
 ###############################
