--- a/README
+++ b/README
@@ -53,3 +53,6 @@ process, thread の大量作成によって、
 かなり重い負荷を開発環境にかけることが出来ますので、
 開発環境が不安定になったりする場合があります。
 注意して遊んでください。
+
+= memo
+https://www.sohamkamani.com/blog/how-to-write-good-documentation/
