--- a/INSTALL
+++ b/INSTALL
@@ -17,4 +17,5 @@ $ sudo apt-get install python-virtualenv
 $ sudo port install py37-opengl
 $ sudo port select --set cython cython37
 $ sudo port install sqlite3-tcl
+$ sudo port install coreutils
 $ pip3 install pyopengl
